--- a/receptor_arudino/webpage/package.json
+++ b/receptor_arudino/webpage/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:electron": "cross-env NODE_ENV=development concurrently -k \"npm:dev\" \"npm:electron\"",
+    "electron": "wait-on tcp:5173 && cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 electron electron/main.js",
+    "start:electron": "cross-env NODE_ENV=production electron electron/main.js"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -14,6 +17,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.2.0"
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron": "^30.0.9",
+    "vite": "^5.2.0",
+    "wait-on": "^7.0.1"
   }
 }
