--- a/receptor_arudino/webpage/package.json
+++ b/receptor_arudino/webpage/package.json
@@ -12,8 +12,10 @@
     "start:electron": "cross-env NODE_ENV=production electron electron/main.js"
   },
   "dependencies": {
+    "@serialport/parser-readline": "^11.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "serialport": "^11.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
